refactor select the used country felids that we are using only

--- a/src/utils/locale/ar.json
+++ b/src/utils/locale/ar.json
@@ -9,7 +9,8 @@
     "america": "أمريكا",
     "asia": "آسيا",
     "europe": "أوروبا",
-    "oceania": "أوقيانوسيا"
+    "oceania": "أوقيانوسيا",
+    "americas": "أمريكا"
   },
   "nativeName": "الاسم الأصلي",
   "population": "عدد السكان",
