feat RCS-21 add auth to app & persist the login between renders

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -21,5 +21,7 @@
   "languages": "اللغات",
   "borderCountries": "البلدان الحدودية",
   "currencies": "العملات",
-  "goBack": "رجوع"
+  "goBack": "رجوع",
+  "welcomeMessage": "مرحبا!",
+  "login": "تسجيل دخول"
 }
