feat RCS-21 persist the auth state

--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -23,5 +23,6 @@
   "currencies": "العملات",
   "goBack": "رجوع",
   "welcomeMessage": "مرحبا!",
-  "login": "تسجيل دخول"
+  "login": "تسجيل دخول",
+  "profile": "الملف الشخصي"
 }
