--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -23,5 +23,6 @@
   "currencies": "Currencies",
   "goBack": "Back",
   "welcomeMessage": "Welcome!",
-  "login": "Login"
+  "login": "Login",
+  "profile": "Profile"
 }
